--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "vue": "2.5.17",
     "vue-router": "3.0.1",
     "vue-i18n": "7.3.2",
-    "vuex": "3.0.1"
+    "vuex": "3.0.1",
+    "xlsx": "^0.11.16"
   },
   "devDependencies": {
     "autoprefixer": "8.5.0",
+    "script-loader": "0.7.2",
+    "file-saver": "1.3.8",
     "babel-core": "6.26.0",
     "babel-eslint": "8.2.6",
     "babel-helper-vue-jsx-merge-props": "2.0.3",
